API test fetch commited

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>hey</h1>
+    <h1 id="title">Title</h1>
+    <p id="description">Description</p>
+    <img src="#" alt="art picture" />
   </body>
 
   <script src="index.js"></script>
